refactor: split definition loaders by domain